# rompy

./: .buildinfo  .coveragerc  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  CONTRIBUTORS  HISTORY.rst  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  Makefile  Makefile.split  NOTICE  README.md  README.rst  REPOSITORY_SPLITTING.md  api.html  apply_manual_fixes.py  backend_reference.html  backends.html  cli.html  core_concepts.html  create_and_push_split_repos.sh  demo.html  environment.yml  formatting_and_logging.html  genindex.html  index.html  mkdocs.yml  models.html  objects.inv  plugin_architecture.html  py-modindex.html  pyproject.toml  pytest.ini  (+13 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-docs.yml  main.yaml  main.yml  sphinx_docs_to_gh_pages.yaml  swan-ci.yml  testing.yml
PIPELINE_MIGRATION/: index.html
_generated/: rompy.core.boundary.BoundaryWaveStation.html  rompy.core.config.BaseConfig.html  rompy.core.data.DataBlob.html  rompy.core.data.DataGrid.html  rompy.core.grid.BaseGrid.html  rompy.core.grid.RegularGrid.html  rompy.core.source.SourceBase.html  rompy.core.source.SourceFile.html  rompy.core.source.SourceIntake.html  rompy.core.source.SourceWavespectra.html  rompy.core.spectrum.LogFrequency.html  rompy.model.ModelRun.html
_modules/: index.html
_modules/rompy/: model.html  pipeline.html  postprocess.html  run.html
_sources/: api.rst.txt  backends.rst.txt  cli.rst.txt  core_concepts.rst.txt  formatting_and_logging.rst.txt  index.rst.txt  models.rst.txt
_sources/_generated/: rompy.core.boundary.BoundaryWaveStation.rst.txt  rompy.core.config.BaseConfig.rst.txt  rompy.core.data.DataBlob.rst.txt  rompy.core.data.DataGrid.rst.txt  rompy.core.grid.BaseGrid.rst.txt  rompy.core.grid.RegularGrid.rst.txt  rompy.core.source.SourceBase.rst.txt  rompy.core.source.SourceFile.rst.txt  rompy.core.source.SourceIntake.rst.txt  rompy.core.source.SourceWavespectra.rst.txt  rompy.core.spectrum.LogFrequency.rst.txt  rompy.model.ModelRun.rst.txt
api/: index.html
architecture_overview/: index.html
backends/: index.html
cli/: index.html
common_workflows/: index.html
configuration_deep_dive/: index.html
contributing/: index.html
core_concepts/: index.html
demo/: index.html
developer/: index.html
developer/architecture/: selection_patterns.html
developer/backend_reference/: index.html
docker/schism/: Dockerfile  Make.defs.gfortran  compile.sh  include_modules  include_modules_wwm
docker/swan/: Dockerfile
docs/: PIPELINE_MIGRATION.md  api.md  architecture_overview.md  backends.md  cli.md  common_workflows.md  configuration_deep_dive.md  contributing.md  core_concepts.md  demo.md  examples.md  extending_models.md  faq.md  formatting_and_logging.md  getting_started.md  index.md  installation.md  models.md  modules.rst  notebook_gallery.md  notebooks.md  plugin_architecture.md  progressive_tutorials.md  quickstart.md  requirements.txt  rompy.rst  schema_advantages.md  schism_guide.md  swan_guide.md  templating.md  testing_guide.md  usage.md  user_guide.md  ww3_guide.md  xbeach_guide.md
docs/developer/: backend_reference.md  index.md
docs/reference/: cli.md  config.md  source.md
docs/source/: api.rst  backend_configurations.rst  backend_reference.rst  backends.rst  backends_quickstart.rst  cli.rst  components.rst  conf.py  core_concepts.rst  demo.rst  demonb.ipynb  formatting.rst  formatting_and_logging.rst  index.rst  models.rst  plugin_architecture.rst  quickstart.rst  schism.rst  string_representation.rst
docs/source2/: api.rst  conf.py  index.rst  quickstart.rst
examples/: README.md  index.html  quickstart_backend_example.py
examples/backends/: 01_basic_local_run.py  02_docker_run.py  03_custom_postprocessor.py  04_complete_workflow.py  05_slurm_backend_run.py  README.md  basic_model_run.py  test_backends_with_modelrun.py
examples/configs/: README.md  basic_modelrun.yml  basic_pipeline.yml  basic_pipeline_with_includes.yml  docker_backend.yml  docker_backend_examples.yml  local_backend.yml  local_backend_examples.yml  pipeline_config.yml  slurm_backend.yml  slurm_backend_examples.yml  templated_advanced.yml  templated_backend.yml  templated_modelrun.yml  validate_configs.py
examples/schism_demo_suite_results/: demo_suite_summary.md
extending_models/: index.html
faq/: index.html
formatting_and_logging/: index.html
getting_started/: index.html
installation/: index.html
models/: index.html
notebook_gallery/: index.html
notebooks/: backend_examples.ipynb  index.html
notebooks/common/: index.html
notebooks/schism/: demo_nml.yaml  demo_nml_3d_nontidal_velocities.yaml  demo_nml_3d_tidal_velocities.yaml  demo_tides_only.yaml  index.html  run_declaritive_test.sh
notebooks/swan/: example_declarative.yml  example_sensitivity.yml  (+2 more)
plugin_architecture/: execution.html  index.html
progressive_tutorials/: index.html
quickstart/: index.html
rompy/: __init__.py  _version.py  cli.py  formatting.py  model.py  plotting.py  utils.py
schema_advantages/: index.html
schism_guide/: index.html
scripts/: extract_notebooks.py
search/: search_index.json
swan_guide/: index.html
templates/: modern_setup_templates.py
templating/: index.html
testing_guide/: index.html
tests/: __init__.py  conftest.py  test_backend_examples.py  test_basegrid.py  test_basemodel.py  test_cloud_transfer.py  test_config_render_delegation.py  test_data.py  test_datablob_http.py  test_helpers.py  test_intake_driver.py  test_join_prefix.py  test_pipeline_config.py  test_postprocess_config.py  test_serilization.py  test_source.py  test_swan_data_formatting.py  test_swanbasic.py  test_swanboundary.py  test_swandata.py  test_swangrid.py  test_swanmodel.py  test_swantemplate.py  test_templates.py  test_templating.py  test_time.py  test_transfer_file.py  test_transfer_http.py  test_transfer_manager.py  test_transfer_oceanum.py  test_transfer_registry.py  test_yaml_loader.py
usage/: index.html
user_guide/: index.html
ww3_guide/: index.html
xbeach_guide/: index.html
(+311 files in other folders)
